--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
+    "declaration": true,
     "removeComments": true,
     "strict": true,
     "noImplicitAny": true,
