--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0-RC",
   "description": "",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "build": "tsc",
-    "lint": "eslint src/**/**"
+    "lint": "eslint src/**/**",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint"
   },
   "author": {
     "name": "Elvis Munoz F.",
