Add CI on pull request

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
     paths-ignore:
       - 'README.md'
       - '.gitignore'
+  pull_request:
+    branches:
+      - master
 
 jobs:
   dependencies:
