--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "khipu-client",
   "version": "1.0.0-RC.4",
-  "description": "",
+  "description": "A NodeJS client for Khipu (non official).",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "build": "tsc",
-    "lint": "eslint . --ext ts",
+    "lint": "eslint .",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint"
@@ -18,24 +18,27 @@
   },
   "license": "LGPL",
   "devDependencies": {
-    "@types/jest": "^26.0.0",
-    "@types/node": "^14.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^3.0.1",
-    "eslint": "^7.1.0",
-    "eslint-config-semistandard": "^15.0.0",
-    "eslint-config-standard": "^16.0.1",
-    "eslint-plugin-import": "^2.20.2",
+    "@ivyhjk/eslint-config-typescript": "0.0.1-next.1",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.21",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "eslint": "^7.18.0",
+    "eslint-config-semistandard": "^15.0.1",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import-length": "^1.0.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "husky": "^4.2.5",
-    "jest": "^25.1.0",
-    "lint-staged": "^10.2.6",
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
     "semistandard": "^16.0.0",
-    "ts-jest": "^25.0.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^3.7.5"
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
