--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "khipu-client",
-  "version": "1.0.0-RC.4",
+  "version": "1.0.0",
   "description": "A NodeJS client for Khipu (non official).",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
