--- a/package.json
+++ b/package.json
@@ -30,29 +30,28 @@
     "name": "Elvis Munoz F.",
     "email": "elvis.munoz.f@gmail.com"
   },
-  "license": "LGPL",
+  "license": "MIT",
   "devDependencies": {
-    "@ivyhjk/eslint-config-typescript": "0.0.1-next.4",
-    "@types/jest": "^27.0.0",
-    "@types/node": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "eslint": "^7.18.0",
-    "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "@ivyhjk/eslint-config-typescript": "^0.0.1-next.5",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.10",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "eslint": "^7.32.0",
+    "eslint-config-semistandard": "^16.0.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-import-length": "^1.0.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "husky": "^7.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^11.0.0",
-    "semistandard": "^16.0.0",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.1.3"
+    "husky": "^7.0.2",
+    "jest": "^27.1.0",
+    "lint-staged": "^11.1.2",
+    "semistandard": "^16.0.1",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   },
   "husky": {
     "hooks": {
