--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "homepage": "https://github.com/ivyhjk/khipu-client-nodejs#readme",
   "bugs": "https://github.com/ivyhjk/khipu-client-nodejs/issues",
   "scripts": {
-    "test": "jest",
     "build": "tsc",
+    "clean": "git clean -dfqX -- node_modules .dist tsconfig*tsbuildinfo",
+    "lint-staged": "lint-staged",
     "lint": "eslint .",
-    "prepare": "npm run build",
+    "prepare": "husky install && npm run build",
     "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint"
+    "preversion": "npm run lint",
+    "test": "jest"
   },
   "author": {
     "name": "Elvis Munoz F.",
@@ -33,25 +35,25 @@
   "license": "MIT",
   "devDependencies": {
     "@ivyhjk/eslint-config-typescript": "^0.0.1-next.5",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "eslint": "^7.32.0",
-    "eslint-config-semistandard": "^16.0.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.29.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-length": "^1.0.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^8.0.1",
-    "jest": "^27.1.0",
-    "lint-staged": "^13.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.0.4",
     "semistandard": "^16.0.1",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   },
   "husky": {
     "hooks": {
