--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
             ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: install dependencies
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm install --force
   lint:
     name: 'cd linter'
     needs: dependencies
